C8 a Chef can create a recepie commplated but I have to improve that later

--- a/src/main/resources/templates/catering.html
+++ b/src/main/resources/templates/catering.html
@@ -18,9 +18,11 @@
 		clearMenuRow();
 		clearContainer();
 		createMenuButton("button1","Get All Ingredients",getAllIngredients);
-		createMenuButton("button2","Add New Ingredient",addIngredient);
-		createMenuButton("button3","Edit Ingredient",getIngredientsForEdit);
-		createMenuButton("button4","Delete Ingredient",getIngredientsForDelete);
+		if([[${#httpServletRequest.isUserInRole("ROLE_ADMIN")}]] || [[${#httpServletRequest.isUserInRole("ROLE_NUTRITIONIST")}]] || [[${#httpServletRequest.isUserInRole("ROLE_STOCKMANAGER")}]]){
+			createMenuButton("button2","Add New Ingredient",addIngredient);
+			createMenuButton("button3","Edit Ingredient",getIngredientsForEdit);
+			createMenuButton("button4","Delete Ingredient",getIngredientsForDelete);
+		};
 		createMenuButton("button5","Add Dummy Ingredient",postDummyIngredients);
 	};
 	
@@ -28,9 +30,11 @@
 		clearMenuRow();
 		clearContainer();
 		createMenuButton("button1","Get All Recepies",getAllRecepies);
-		createMenuButton("button2","Add New Recepie",addRecepie);
-		//createMenuButton("button3","Edit Ingredient",getIngredientsForEdit);
-		//createMenuButton("button4","Delete Ingredient",getIngredientsForDelete);
+		if([[${#httpServletRequest.isUserInRole("ROLE_ADMIN")}]] || [[${#httpServletRequest.isUserInRole("ROLE_CHEF")}]]){
+			createMenuButton("button2","Add New Recepie",addRecepie);
+			//createMenuButton("button3","Edit Ingredient",getIngredientsForEdit);
+			//createMenuButton("button4","Delete Ingredient",getIngredientsForDelete);
+		};
 		createMenuButton("button5","Add Dummy Recepie",postDummyRecepies);
 	};
 	
@@ -119,6 +123,13 @@
 					getIngredientListSorted(api,"id",false,false,0);
 				}else{
 					getIngredientListSorted(api+"/"+search+"/search","id",false,false,0);
+				};
+				break;
+			case "recepie":
+				if (search==""){
+					getRecepieListSorted(api);
+				}else{
+					getRecepieListSorted(api+"/"+search+"/search");
 				};
 				break;
 			case "settings/role":
@@ -404,13 +415,36 @@
 	};
 	
 	//Add New Recepie Function
-	function postRecepie() {  
+	function checkPostRecepie() {  
+		var checkboxs = document.getElementsByTagName("input");
+		var checkboxList =[];
+		var amountList =[];
+		for(var i = 0; i < checkboxs.length; i++) {
+		    if(checkboxs[i].type == "checkbox") {
+		    	if(checkboxs[i].checked == true) {
+		    		checkboxList.push(checkboxs[i].id); 
+		    		amountList.push(document.getElementById(checkboxs[i].id+"_input").value);
+		    	};
+		    };
+		};
+		if(checkboxList.length >= 1){
+			var newId = document.getElementById("newId").innerHTML;
+			for(var i = 0; i < checkboxList.length; i++) {
+				postData("recepie_ingredient",'{"recepieId":'+ newId +',"ingredientId":'+ checkboxList[i] +',"ingredient_amount":'+ amountList[i] +'}');
+			};			
+		}else{
+			alert("Please select 1 or more ingredients with amount for adding recepie");
+		};
+	};
+	
+	function postRecepie() {	
 		var name = document.getElementById("name_input").value;
 		var unitType = document.getElementById("unit_type_input").value;
 		var recepieType = document.getElementById("recepie_type_input").value;
 		var calorie = document.getElementById("calorie_per_portion_input").value;
 		var portion = document.getElementById("portion_per_recepie_input").value;
-		postData("recepie",'{"name":"'+name+'","unitType":"'+unitType+'","recepieType":"'+recepieType+'","caloriePerPortion":'+calorie+',"portionPerRecepie":'+portion+'}');		
+		postData("recepie",'{"name":"'+name+'","unitType":"'+unitType+'","recepieType":"'+recepieType+'","caloriePerPortion":'+calorie+',"portionPerRecepie":'+portion+'}');
+		createIngredientsForRecepieForm();
 	};
 	
 	function addRecepie() {  
@@ -424,7 +458,7 @@
 		function addEnterance(id, title, value) {
 			var div = document.createElement("DIV");
 			div.className="row";
-			div.style="margin-top:10px"
+			div.style="margin-top:10px";
 			var label = document.createElement("LABEL");
 			var textNode = document.createTextNode(title);
 			label.appendChild(textNode);
@@ -478,13 +512,26 @@
 		else {
 			var textNode = document.createTextNode("Add Recepie");
 			var button = document.createElement("BUTTON");
+			button.id = "addRecepie";
 			button.onclick = postRecepie;
 			button.className="btn btn-default";
 			button.appendChild(textNode);
 			divButton.appendChild(button);
 		};
-		div.appendChild(divButton);
 		container.appendChild(div);
+		div.appendChild(divButton);
+	};
+	
+	function createIngredientsForRecepieForm() { 
+		var textNode = document.createTextNode("Add Ingredients");
+		var button = document.createElement("BUTTON");
+		button.onclick = checkPostRecepie;
+		button.className="btn btn-default";
+		button.appendChild(textNode);
+		var element = document.getElementById("addRecepie");
+		element.className = "btn btn-default disabled";
+		element.parentNode.appendChild(button);
+		getIngredientsForRecepie("ingredient");
 	};
 	
 	function getRecepieListSorted(api,key,sort, firstTime, mode) {
@@ -539,6 +586,62 @@
 				};
 				table.className='table table-striped table-bordered table-hover';
 				container.appendChild(table);
+			};
+		};
+		xhttp.open("GET", "http://localhost:8082/api/" + api);
+		xhttp.setRequestHeader("Content-type", "application/json");
+		xhttp.send();
+	}
+	
+	function getIngredientsForRecepie(api) {
+		var myObj, x, txt = "";
+		var xhttp = new XMLHttpRequest();
+		xhttp.onreadystatechange = function() {
+			if (this.readyState == 4 && this.status == 200) {
+				var container = document.getElementById("Container");
+				var div = document.createElement("DIV");
+				div.className="row";
+				div.style="margin-top:10px";
+				var label = document.createElement("LABEL");
+				var textNode = document.createTextNode("Ingredients");
+				label.appendChild(textNode);
+				label.className="col-sm-offset-1 col-sm-2 control-label";
+				div.appendChild(label);
+				var divIngredients = document.createElement("DIV");
+				divIngredients.className ="col-sm-8 table-bordered";
+				div.appendChild(divIngredients);
+				myObj = JSON.parse(this.responseText);
+				myObj = sortArray(myObj,"name", false);
+				for (x in myObj){
+					var divFormGroup = document.createElement("DIV");
+					divFormGroup.className = "col-sm-6 form-group";
+					var checkbox = document.createElement("INPUT");
+					checkbox.className = "col-sm-1";
+					checkbox.type = "checkbox";
+					checkbox.id = myObj[x].id;
+					divFormGroup.appendChild(checkbox);
+					var label = document.createElement("LABEL");
+					var labelText = document.createTextNode(myObj[x].name);
+					label.className = "col-sm-6";
+					label.appendChild(labelText);
+					divFormGroup.appendChild(label);
+					var divInputGroup = document.createElement("DIV");
+					divInputGroup.className = "col-sm-5 input-group";
+					var input = document.createElement("INPUT");
+					input.type = "text";
+					input.id = myObj[x].id + "_input";
+					input.className = "form-control";
+					input.placeholder = "Amount";
+					divInputGroup.appendChild(input);
+					var divInputGroupAddon = document.createElement("DIV");
+					divInputGroupAddon.className = "input-group-addon";
+					var addonText = document.createTextNode(myObj[x].unitType);
+					divInputGroupAddon.appendChild(addonText);
+					divInputGroup.appendChild(divInputGroupAddon);
+					divFormGroup.appendChild(divInputGroup);
+					divIngredients.appendChild(divFormGroup);
+				};
+				container.appendChild(div);
 			};
 		};
 		xhttp.open("GET", "http://localhost:8082/api/" + api);
@@ -695,7 +798,6 @@
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
 				myObj = JSON.parse(this.responseText);
-				
 			}
 		};
 		xhttp.open("GET", "http://localhost:8082/api/" + api);
@@ -722,7 +824,19 @@
 		var xhttp = new XMLHttpRequest();
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 202) {
-				document.getElementById("Container").innerHTML = this.responseText+" Item Added";
+				switch(api){
+					default:
+						document.getElementById("Container").innerHTML = this.responseText+" Item Added";
+						break;
+					case "recepie":
+						var label = document.createElement("LABEL");
+						var text = document.createTextNode(this.responseText);
+						label.appendChild(text);
+						label.style.display = "none";
+						label.id="newId";
+						document.getElementById("Container").appendChild(label);
+						break;
+				}
 			}
 		};
 		xhttp.open("POST", "http://localhost:8082/api/" + api, true);
@@ -769,14 +883,8 @@
 	};
 	
 	function generateHtmlMenu(){
-		if([[${#httpServletRequest.isUserInRole("ADMIN")}]]){
-			
-		};
-		
-		if([[${#httpServletRequest.isUserInRole("USER")}]]){
-			//settingsMenu.style.visibility = "hidden";
-			var element = document.getElementById("settingsMenuLi");
-			element.parentNode.removeChild(element);
+		if(![[${#httpServletRequest.isUserInRole("ROLE_ADMIN")}]]){
+			removeElement("settingsMenuLi");
 		};
 	};
 	
